odevzdani/tests/valid_input/ok14.java
class Main {
    static void run() {
        int b = Hello.c;
    }
}

class Hello {
    static int run() {
        int c;
    }
    static int c = 5;
}
