odevzdani/tests/invalid_syn/syn06.java
class Main {
	static void run() {
		if (a) {}
		else if (b) {}
		else if (b()) {}
		print();
	}
	static int b
}
